--- a/src/main/resources/templates/loginWithSecret.html
+++ b/src/main/resources/templates/loginWithSecret.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
+<head th:insert="general.html :: headerfiles">
     <title>Log In</title>
-    <link rel="stylesheet" href="../styles.css" />
 </head>
 <body>
-<h1>Please log in! (After login, the JSESSIONID in your browser's cookie will contain your login secret.)</h1>
+<header th:insert="general.html :: header"> </header>
+<h2>Please log in!</h2>
 <form action="/loginWithSecret" method="POST">
     <label>Username</label>
     <input type="text" name="username">
