--- a/src/main/resources/templates/indexWithSecret.html
+++ b/src/main/resources/templates/indexWithSecret.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
+<head th:insert="general.html :: headerfiles">
     <title>App</title>
-    <link rel="stylesheet" href="../styles.css" />
 </head>
 <body>
-<h1>I'm in the application!</h1>
+<header th:insert="general.html :: header"> </header>
+<h2>I'm in the application!</h2>
 <div th:text="'Your username is: ' + ${username}"></div>
 <form action="/logoutWithSecret" method="POST">
   <input type="submit" value="Log Out">
