--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
+<head th:insert="general.html :: headerfiles">
     <title>Log In</title>
-    <link rel="stylesheet" href="../styles.css" />
 </head>
 <body>
-<h1>Please log in!</h1>
+<header th:insert="general.html :: header"> </header>
 <form action="/login" method="POST">
     <label>Username</label>
     <input type="text" name="username">
