--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Log In</title>
-    <link rel="stylesheet" href="../styles.css" />
+<head th:insert="general.html :: headerfiles">
+    <title>Sign Up</title>
 </head>
 <body>
-<h1>Sign up here!</h1>
+<header th:insert="general.html :: header"> </header>
+<h2>Sign Up</h2>
 <form action="/signup" method="POST">
     <label>Username</label>
     <input type="text" name="username">
